chore: switch to ubi9 openjdk image